--- a/index.html
+++ b/index.html
@@ -13,3 +13,29 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+</head>
+<h1>
+    Saravanakumar's Portfolio
+</h1>
+<h2>
+    I'm a Developer
+</h2>
+<hr>
+
+<body>
+   <h2> <a href="./public/birthday-invite.html">BirthDay Invite</a></h2>
+   <img src="./assets/images/birthday-invite.png" height="200" alt="birthday image">
+   <h2><a href="./public/movie-ranking.html">Movie Ranking</a></h2>
+   <img src="./assets/images/movie-ranking.png" height="200" alt="Movie Ranking">
+   <hr>
+   <a href="./public/contact.html">Contact</a>
+   <a href="./public/about.html">About</a>
+    
+</body>
+</html>
